--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/slim": "^3.5.0",
     "framer-motion": "^11.3.9",
     "next": "14.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
